--- a/homepage.html
+++ b/homepage.html
@@ -55,12 +55,30 @@
       <h2 class="h2_style">
         WELCOME TO POLYmer Extrusion
       </h2>
+      <p class="text_style">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tristique vehicula porta. Nullam quis nulla et leo consequat tincidunt. Etiam quis neque dolor. Vestibulum tristique luctus gravida. 
+      </p>
       <div class="services_slider">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
+        <a href="javascript:void(0);">
+          <img src="img/slider_img_1.png" alt="slider_img_1">
+          <h3 class="h3_style">Нанесення флексографічного друку</h3>
+        </a>
+        <a href="javascript:void(0);">
+          <img src="img/slider_img_2.png" alt="slider_img_2">
+          <h3 class="h3_style">Плівка та пакети для промислово пакування</h3>
+        </a>
+        <a href="javascript:void(0);">
+          <img src="img/slider_img_3.png" alt="slider_img_3">
+          <h3 class="h3_style">Термозбіжні Плівка та пакети</h3>
+        </a>
+        <a href="javascript:void(0);">
+          <img src="img/slider_img_4.png" alt="slider_img_4">
+          <h3 class="h3_style">Пакети поліетиленові  для побутового використання</h3>
+        </a>
+        <a href="javascript:void(0);">
+          <img src="img/slider_img_5.png" alt="slider_img_5">
+          <h3 class="h3_style">Реалізація Нестандартних замовлень</h3>
+        </a>
       </div>
     </section>
     
@@ -212,7 +230,13 @@
     <div class="footer_copy">
       <div class="container">
         <span class="pull-left">Copyright 2016. All Rights Reserved.</span>
-        <span class="pull-right">Веб-сайт створено студією Welldo</span>
+        <span class="pull-right">
+          Веб-сайт створено студією Welldo 
+          <a href="javascript:void(0);">
+            <img src="img/welldo_sign.png" alt="welldo">
+          </a>
+        </span>
+
       </div>
     </div>
   </footer>
@@ -243,7 +267,8 @@
         autoplay: true,
         autoplayTimeout: 2000,
         autoplayHoverPause: true,
-        autoplaySpeed: 2000
+        autoplaySpeed: 2000,
+        margin: 15
       });
     });
   </script>
