--- a/homepage.html
+++ b/homepage.html
@@ -15,7 +15,7 @@
           <img src="img/logo.png" alt="berketa_logo">
         </a>
         <!-- navigation -->
-        <nav id="nav_desktop" class="menu menu--viola pull-right">
+        <nav id="nav_desktop" class="menu menu--viola pull-right hidden-xs">
           <ul class="menu__list">
             <li class="menu__item menu__item--current">
               <a href="#" class="menu__link">головна</a>
@@ -34,8 +34,11 @@
             </li>
           </ul>
         </nav>
+        <div class="menu_switch visible-xs pull-right">
+          <span></span>
+        </div>
       </div>
-      <div class="mid">
+      <div class="mid hidden-xs">
         <h1 class="h1_style">
           Awesome Services you can trust
         </h1>
@@ -43,21 +46,43 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tristique vehicula porta. Nullam quis nulla et leo consequat tincidunt. Etiam quis neque dolor. Vestibulum tristique luctus 
         </p>
       </div>
-      <div class="bot"></div>
     </div>
   </header>
+  <div class="row">
+    <nav id="nav_mobile" class="animated">
+      <ul>
+        <li>
+          <a href="#">головна</a>
+        </li>
+        <li>
+          <a href="#">про нас</a>
+        </li>
+        <li>
+          <a href="#">послуги</a>
+        </li>
+        <li>
+          <a href="#">новини</a>
+        </li>
+        <li>
+          <a href="#">контакти</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
   
   <!-- mainwrapper -->
   <section id="wrapper">
 
     <!-- services -->
     <section class="services align_center">
-      <h2 class="h2_style">
-        WELCOME TO POLYmer Extrusion
-      </h2>
-      <p class="text_style">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tristique vehicula porta. Nullam quis nulla et leo consequat tincidunt. Etiam quis neque dolor. Vestibulum tristique luctus gravida. 
-      </p>
+      <div class="container">
+        <h2 class="h2_style">
+          WELCOME TO POLYmer Extrusion
+        </h2>
+        <p class="text_style">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tristique vehicula porta. Nullam quis nulla et leo consequat tincidunt. Etiam quis neque dolor. Vestibulum tristique luctus gravida. 
+        </p>
+      </div>
       <div class="services_slider">
         <a href="javascript:void(0);">
           <img src="img/slider_img_1.png" alt="slider_img_1">
@@ -88,7 +113,7 @@
         <h2 class="h2_style">
           we are cool in:
         </h2>
-        <div class="col-md-4">
+        <div class="col-sm-4 item">
           <img src="img/adv_1.png" alt="quality" class="img-responsive">
           <h3 class="h3_title">
             Високоякісне обладнання
@@ -97,7 +122,7 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam laboriosam numquam voluptas sapiente 
           </p>
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-4 item">
           <img src="img/adv_2.png" alt="solution" class="img-responsive">
           <h3 class="h3_title">
             Реалізація нестандартних рішень
@@ -106,7 +131,7 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam laboriosam numquam voluptas sapiente 
           </p>
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-4 item">
           <img src="img/adv_3.png" alt="individual" class="img-responsive">
           <h3 class="h3_title">
             Індивідуальний підхід
@@ -130,8 +155,8 @@
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem molestias saepe alias beatae, animi cum sint vitae! Dicta fuga distinctio
         </p>
       </div>
-      <div class="items_wrapper">
-        <div class="col-md-4">
+      <div class="items_wrapper clearfix">
+        <div class="col-md-4 col-sm-6 ">
           <div class="item">
             <div class="item_data">april 11, 2016</div>
             <img src="img/news_test_img.jpg" alt="news_img_alt" class="img-responsive">
@@ -146,7 +171,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-6">
           <div class="item">
             <div class="item_data">april 11, 2016</div>
             <img src="img/news_test_img.jpg" alt="news_img_alt" class="img-responsive">
@@ -162,7 +187,7 @@
             
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-6">
           <div class="item">
             <div class="item_data">april 11, 2016</div>
             <img src="img/news_test_img.jpg" alt="news_img_alt" class="img-responsive">
@@ -198,7 +223,7 @@
   <!-- footer -->
   <footer id="footer">
     <div class="container">
-      <div class="col-md-4">
+      <div class="col-sm-4">
         <h3 class="h3_style">address</h3>
         <p class="text_style">
           E44, Design Street, Web Corner
@@ -206,7 +231,7 @@
           Melbourne - 005
         </p>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-4">
         <h3 class="h3_style">work at</h3>
         <ul>
           <li class="text_style">
@@ -223,7 +248,7 @@
           </li>
         </ul>
       </div>
-      <div class="col-md-4 col-md-offset-1">
+      <div class="col-sm-4 col-md-offset-1">
         <h3 class="h3_style">signup for newsletter</h3>
       </div>
     </div>
@@ -268,7 +293,18 @@
         autoplayTimeout: 2000,
         autoplayHoverPause: true,
         autoplaySpeed: 2000,
-        margin: 15
+        margin: 15,
+        responsive:{
+            0:{
+                items:1,
+            },
+            600:{
+                items:3,
+            },
+            1000:{
+                items:5,
+            }
+        }
       });
     });
   </script>
