footer add row, contacts page template

--- a/contacts.html
+++ b/contacts.html
@@ -77,32 +77,18 @@
       <div class="breadcrumb_wrapper">
         <ol class="breadcrumb container">
           <li><a href="#">Головна</a></li>
-          <li class="active">Про нас</li>
+          <li class="active">Контакти</li>
         </ol>
       </div>
 
       <div class="container inner_container">
-        <div class="ck_editor">
-          <img src="img/news_test_img.jpg" class="left" alt="img">
-          <h2 class="title_small">The most well-known dummy text is the</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-          </p>
-          <a href="#">test link</a>, <i>test italic</i>, <b>test b</b>, <strong>test strong</strong> amet, consectetur adipisicing elit. Tempora aperiam, illum ex, optio temporibus eum distinctio, impedit tenetur facilis maiores vero quisquam, sequi ducimus earum sapiente expedita quidem soluta dolore.
-
-          <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, molestias! Quisquam consequatur illo ea, eaque architecto cupiditate aliquam necessitatibus qui est voluptate aliquid repudiandae harum voluptatibus. Ea distinctio fugit laboriosam.</div>
-          <div>Consectetur quaerat distinctio neque laudantium numquam at, doloremque veniam eos hic est! Illum consequatur, provident corporis doloremque voluptatibus quaerat accusantium, sit odit mollitia ducimus laborum ut et. Cum aperiam, aliquid!</div>
-          <div>A quaerat, esse omnis similique. Vitae sint minus doloremque ratione voluptates facere voluptatum deserunt quis qui repudiandae vel numquam, iste sed. Quae eum ducimus cumque quis, unde, dignissimos reiciendis inventore?</div>
-          <div>Amet assumenda culpa ipsa ut deserunt ex magnam adipisci quibusdam omnis tenetur dolore dolorem, laudantium nihil aut ab sapiente fugit, alias beatae nobis, sint. Ducimus reprehenderit, recusandae voluptatibus enim maiores.</div>
-          <div>Modi dolorem aliquam ipsum perspiciatis minima omnis similique voluptate ea libero eveniet pariatur, numquam culpa. Similique nisi cum, ipsam quod laudantium ratione incidunt vero in, totam praesentium architecto odit aperiam.</div>
-          <div>Omnis laborum odio corporis mollitia. Inventore, a provident aut sed recusandae pariatur maxime dicta aliquid enim! Veritatis harum praesentium cum amet consequatur sint inventore laborum aliquam eligendi. Molestias, quasi, eum!</div>
-          <div>Id error debitis, eius ipsa amet ullam cumque eos qui vero quibusdam! Incidunt similique itaque rerum voluptatibus atque, dolores accusantium, error odio, enim repudiandae exercitationem. Iure esse quam voluptates fugiat!</div>
-          <div>Dolore autem odit itaque quam nobis, consectetur quas dolorum obcaecati porro dignissimos qui labore quibusdam omnis ex vitae magnam delectus, rem placeat officiis. Hic perferendis, placeat explicabo. Dolorum, maxime incidunt.</div>
-          <div>Voluptatum modi repellat ad sed maxime hic impedit eaque fugit architecto quis omnis vitae sequi aliquid, nisi at vero est libero tenetur officia animi. In est expedita quo placeat doloremque?</div>
-          <div>Recusandae debitis maiores minus iste fuga nemo accusantium, architecto temporibus. Consequuntur totam, vero voluptate nulla repellendus itaque blanditiis a dolorum minima ipsa sapiente consequatur sunt, quibusdam sed incidunt quaerat. Rem.</div>
+        <div class="row">
+          <aside class="left col-sm-8">
+            left
+          </aside>
+          <aside class="right col-sm-4">
+            right
+          </aside>
         </div>
       </div>
     </section>
