--- a/homepage.html
+++ b/homepage.html
@@ -223,33 +223,35 @@
   <!-- footer -->
   <footer id="footer">
     <div class="container">
-      <div class="col-sm-4">
-        <h3 class="h3_style">address</h3>
-        <p class="text_style">
-          E44, Design Street, Web Corner
-          <br>
-          Melbourne - 005
-        </p>
-      </div>
-      <div class="col-md-3 col-sm-4">
-        <h3 class="h3_style">work at</h3>
-        <ul>
-          <li class="text_style">
-            <span>Monday - Friday</span>
-            <span>8.00 - 18.00</span>
-          </li>
-          <li class="text_style">
-            <span>Saturday </span>
-            <span>8.00 - 18.00</span>
-          </li>
-          <li class="text_style">
-            <span>Sunday</span>
-            <span>8.00 - 18.00</span>
-          </li>
-        </ul>
-      </div>
-      <div class="col-sm-4 col-md-offset-1">
-        <h3 class="h3_style">signup for newsletter</h3>
+      <div class="row">
+        <div class="col-sm-4">
+          <h3 class="h3_style">address</h3>
+          <p class="text_style">
+            E44, Design Street, Web Corner
+            <br>
+            Melbourne - 005
+          </p>
+        </div>
+        <div class="col-md-3 col-sm-4">
+          <h3 class="h3_style">work at</h3>
+          <ul>
+            <li class="text_style">
+              <span>Monday - Friday</span>
+              <span>8.00 - 18.00</span>
+            </li>
+            <li class="text_style">
+              <span>Saturday </span>
+              <span>8.00 - 18.00</span>
+            </li>
+            <li class="text_style">
+              <span>Sunday</span>
+              <span>8.00 - 18.00</span>
+            </li>
+          </ul>
+        </div>
+        <div class="col-sm-4 col-md-offset-1">
+          <h3 class="h3_style">signup for newsletter</h3>
+        </div>
       </div>
     </div>
     <div class="footer_copy">
