--- a/contacts.html
+++ b/contacts.html
@@ -83,11 +83,33 @@
 
       <div class="container inner_container">
         <div class="row">
+          <!-- left side -->
           <aside class="left col-sm-8">
-            left
+            <div class="row">
+              <div class="col-sm-6">
+                <h2 class="h2_style">hu2</h2>
+              </div>
+              <div class="col-sm-6">
+                <h2 class="h2_style">hu2</h2>
+              </div>
+            </div>
+            <div class="row">
+              <div id="gmap" class="col-xs-12">
+                here be g map
+              </div>
+            </div>
           </aside>
+
+          <!-- right side -->
           <aside class="right col-sm-4">
-            right
+            <h2 class="h2_style">hu2</h2>
+            <form action="" class="form_style">
+              <input type="text" placeholder="Ім'я">
+              <input type="text" placeholder="Телефон">
+              <input type="email" placeholder="E-mail">
+              <textarea name="" id="" cols="30" rows="10" placeholder="Повідомлення"></textarea>
+              <input type="submit" value="Надіслати" class="send_btn">
+            </form>
           </aside>
         </div>
       </div>
@@ -152,7 +174,7 @@
   <!-- menu -->
   <script src="js/classie.js"></script>
   <script src="js/clipboard.min.js"></script>
-
+  
   <script>
   // menu script
   (function() {
