--- a/contacts.html
+++ b/contacts.html
@@ -81,21 +81,32 @@
         </ol>
       </div>
 
-      <div class="container inner_container">
+      <div class="container inner_container contacts_content">
         <div class="row">
           <!-- left side -->
           <aside class="left col-sm-8">
             <div class="row">
               <div class="col-sm-6">
                 <h2 class="h2_style">hu2</h2>
+                <p class="text_style">
+                  E44, Design Street, Web Corner
+                  <br>
+                  Melbourne - 005
+                </p>
               </div>
               <div class="col-sm-6">
                 <h2 class="h2_style">hu2</h2>
+                <p class="text_style">
+                  +380 97 02 45 456
+                  <br>
+                  +380 97 02 45 456
+                </p>
               </div>
             </div>
             <div class="row">
-              <div id="gmap" class="col-xs-12">
-                here be g map
+              <div class="col-xs-12">
+                <!-- gmap -->
+                <div id="gmap">here be g map, styles - contacts.css, height: 370px</div>
               </div>
             </div>
           </aside>
