--- a/contacts.html
+++ b/contacts.html
@@ -87,7 +87,7 @@
           <aside class="left col-sm-8">
             <div class="row">
               <div class="col-sm-6">
-                <h2 class="h2_style">hu2</h2>
+                <h2 class="h2_style">ADDRESS</h2>
                 <p class="text_style">
                   E44, Design Street, Web Corner
                   <br>
@@ -95,7 +95,7 @@
                 </p>
               </div>
               <div class="col-sm-6">
-                <h2 class="h2_style">hu2</h2>
+                <h2 class="h2_style">Phone</h2>
                 <p class="text_style">
                   +380 97 02 45 456
                   <br>
@@ -113,7 +113,7 @@
 
           <!-- right side -->
           <aside class="right col-sm-4">
-            <h2 class="h2_style">hu2</h2>
+            <h2 class="h2_style">Write for us</h2>
             <form action="" class="form_style">
               <input type="text" placeholder="Ім'я">
               <input type="text" placeholder="Телефон">
