--- a/homepage.html
+++ b/homepage.html
@@ -7,14 +7,21 @@
   <link rel="stylesheet" href="css/application.css">
 </head>
 <body>
+  
+  <!-- 
+    2 types of header - with middle text for mainpage and without - for other pages,
+    for now - added .header_mainpage for mainpage header, styles - header.css,
+    removed middle text from other pages
+  -->
+
   <!-- header -->
-  <header id="header">
+  <header id="header" class="header_mainpage">
     <div class="container">
       <div class="top clearfix">
         <a href="javascript:void(0);" class="logo pull-left">
           <img src="img/logo.png" alt="berketa_logo">
         </a>
-        <!-- navigation -->
+        <!-- navigation for PC-->
         <nav id="nav_desktop" class="menu menu--viola pull-right hidden-xs">
           <ul class="menu__list">
             <li class="menu__item menu__item--current">
@@ -34,6 +41,7 @@
             </li>
           </ul>
         </nav>
+        <!-- mobile menu button -->
         <div class="menu_switch visible-xs pull-right">
           <span></span>
         </div>
@@ -49,6 +57,7 @@
     </div>
   </header>
   <div class="row">
+    <!-- navigation for mobile -->
     <nav id="nav_mobile" class="animated">
       <ul>
         <li>
@@ -83,6 +92,7 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tristique vehicula porta. Nullam quis nulla et leo consequat tincidunt. Etiam quis neque dolor. Vestibulum tristique luctus gravida. 
         </p>
       </div>
+      <!-- slider -->
       <div class="services_slider">
         <a href="javascript:void(0);">
           <img src="img/slider_img_1.png" alt="slider_img_1">
@@ -251,6 +261,10 @@
         </div>
         <div class="col-sm-4 col-md-offset-1">
           <h3 class="h3_style">signup for newsletter</h3>
+          <a href="javasctipt: void(0);">1</a>
+          <a href="javasctipt: void(0);">2</a>
+          <a href="javasctipt: void(0);">3</a>
+          <a href="javasctipt: void(0);">4</a>
         </div>
       </div>
     </div>
