--- a/homepage.html
+++ b/homepage.html
@@ -50,7 +50,7 @@
         <h1 class="h1_style">
           Awesome Services you can trust
         </h1>
-        <p class="text_style">
+        <p class="text_style ck_editor">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tristique vehicula porta. Nullam quis nulla et leo consequat tincidunt. Etiam quis neque dolor. Vestibulum tristique luctus 
         </p>
       </div>
@@ -88,7 +88,7 @@
         <h2 class="h2_style">
           WELCOME TO POLYmer Extrusion
         </h2>
-        <p class="text_style">
+        <p class="ck_editor">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tristique vehicula porta. Nullam quis nulla et leo consequat tincidunt. Etiam quis neque dolor. Vestibulum tristique luctus gravida. 
         </p>
       </div>
@@ -128,7 +128,7 @@
           <h3 class="h3_title">
             Високоякісне обладнання
           </h3>
-          <p class="text_style">
+          <p class="text_style ck_editor">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam laboriosam numquam voluptas sapiente 
           </p>
         </div>
@@ -137,7 +137,7 @@
           <h3 class="h3_title">
             Реалізація нестандартних рішень
           </h3>
-          <p class="text_style">
+          <p class="text_style ck_editor">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam laboriosam numquam voluptas sapiente 
           </p>
         </div>
@@ -146,7 +146,7 @@
           <h3 class="h3_title">
             Індивідуальний підхід
           </h3>
-          <p class="text_style">
+          <p class="text_style ck_editor">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam laboriosam numquam voluptas sapiente 
           </p>
         </div>
@@ -161,7 +161,7 @@
         <h2 class="h2_style">
           news
         </h2>
-        <p class="text_style">
+        <p class="ck_editor">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem molestias saepe alias beatae, animi cum sint vitae! Dicta fuga distinctio
         </p>
       </div>
@@ -174,7 +174,7 @@
               <h3 class="h3_title">
                 Високоякісне обладнання
               </h3>
-              <p class="text_style">
+              <p class="ck_editor">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam laboriosam numquam voluptas sapiente 
               </p>
               <a href="javascript: void(0);" class="detailed pull-right">more details +</a>
@@ -189,7 +189,7 @@
               <h3 class="h3_title">
                 Високоякісне обладнання
               </h3>
-              <p class="text_style">
+              <p class="ck_editor">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam laboriosam numquam voluptas sapiente 
               </p>
               <a href="javascript: void(0);" class="detailed pull-right">more details +</a>
@@ -202,7 +202,7 @@
             <div class="item_data">april 11, 2016</div>
             <img src="img/news_test_img.jpg" alt="news_img_alt" class="img-responsive">
             <div class="description">
-              <h3 class="h3_title">
+              <h3 class="ck_editor">
                 Високоякісне обладнання
               </h3>
               <p class="text_style">
@@ -223,7 +223,7 @@
         <h2 class="h2_style">
           seo
         </h2>
-        <p class="text_style">
+        <p class="ck_editor">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit consectetur cumque, aperiam veniam perferendis delectus eveniet unde, optio dolorem possimus hic qui aut quam, sequi, amet nesciunt impedit nemo? Fugit.
         </p>
       </div>
@@ -298,7 +298,7 @@
 
   <script>
     // initialize slider
-    // use only on mainpage!
+    // used only on mainpage!
     $(document).ready(function(){
       $('.services_slider').owlCarousel({
         items: 5,
@@ -311,15 +311,15 @@
         autoplaySpeed: 2000,
         margin: 15,
         responsive:{
-            0:{
-                items:1,
-            },
-            600:{
-                items:3,
-            },
-            1000:{
-                items:5,
-            }
+          0:{
+              items:1,
+          },
+          600:{
+              items:3,
+          },
+          1000:{
+              items:5,
+          }
         }
       });
     });
