news template, footer socials

--- a/homepage.html
+++ b/homepage.html
@@ -261,10 +261,12 @@
         </div>
         <div class="col-sm-4 col-md-offset-1">
           <h3 class="h3_style">signup for newsletter</h3>
+          <div class="f_socials">
           <a href="javasctipt: void(0);">1</a>
           <a href="javasctipt: void(0);">2</a>
           <a href="javasctipt: void(0);">3</a>
           <a href="javasctipt: void(0);">4</a>
+          </div>
         </div>
       </div>
     </div>
