im tired, going home

--- a/news.html
+++ b/news.html
@@ -74,7 +74,18 @@
       </div>
 
       <div class="container">
-        news
+        <div class="news_page_top align_center">
+          <h2 class="h2_style">
+            news
+          </h2>
+          <div class="ck_editor">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dolore eaque error distinctio accusamus saepe, nam esse omnis, quae incidunt ex consequatur asperiores odit explicabo quisquam perspiciatis harum dicta eligendi.
+          </div>
+        </div>
+
+        <div class="row news_items_wrapper">
+          .col-xs-12.item
+        </div>
       </div>
     </section>
   </section>
