ck_editor_img class

--- a/about.html
+++ b/about.html
@@ -75,7 +75,15 @@
 
       <div class="container inner_container">
         <div class="ck_editor">
-          <img src="img/news_test_img.jpg" class="left" alt="img">
+          <!-- this image for about.html and service.html -->
+          <div class="align-left ck_editor_img">
+            <img src="img/news_test_img.jpg" alt="img">
+          </div>
+          <!-- this image for news_item, have date -->
+          <div class="align-left ck_editor_img ck_editor_img_news">
+            <div class="item_date">april 11, 2016</div>
+            <img src="img/news_test_img.jpg" alt="img">
+          </div>
           <h2 class="title_small">The most well-known dummy text is the</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
