--- a/homepage.html
+++ b/homepage.html
@@ -168,7 +168,7 @@
       <div class="items_wrapper clearfix">
         <div class="col-md-4 col-sm-6 ">
           <div class="item">
-            <div class="item_data">april 11, 2016</div>
+            <div class="item_date">april 11, 2016</div>
             <img src="img/news_test_img.jpg" alt="news_img_alt" class="img-responsive">
             <div class="description">
               <h3 class="h3_title">
@@ -183,7 +183,7 @@
         </div>
         <div class="col-md-4 col-sm-6">
           <div class="item">
-            <div class="item_data">april 11, 2016</div>
+            <div class="item_date">april 11, 2016</div>
             <img src="img/news_test_img.jpg" alt="news_img_alt" class="img-responsive">
             <div class="description">
               <h3 class="h3_title">
@@ -199,7 +199,7 @@
         </div>
         <div class="col-md-4 col-sm-6">
           <div class="item">
-            <div class="item_data">april 11, 2016</div>
+            <div class="item_date">april 11, 2016</div>
             <img src="img/news_test_img.jpg" alt="news_img_alt" class="img-responsive">
             <div class="description">
               <h3 class="ck_editor">
