--- a/about.html
+++ b/about.html
@@ -72,6 +72,15 @@
           <li class="active">Про нас</li>
         </ol>
       </div>
+      
+      <!-- breadcrumbs for news -->
+      <div class="breadcrumb_wrapper">
+        <ol class="breadcrumb container">
+          <li><a href="#">Головна</a></li>
+          <li><a href="#">Новини</a></li>
+          <li class="active">Opps...404!</li>
+        </ol>
+      </div>
 
       <div class="container inner_container">
         <div class="ck_editor">
