detailed, news item

--- a/about.html
+++ b/about.html
@@ -85,11 +85,11 @@
       <div class="container inner_container">
         <div class="ck_editor">
           <!-- this image for about.html and service.html -->
-          <div class="align-left ck_editor_img">
+          <div class="ck_editor_img">
             <img src="img/news_test_img.jpg" alt="img">
           </div>
           <!-- this image for news_item, have date -->
-          <div class="align-left ck_editor_img ck_editor_img_news">
+          <div class="ck_editor_img ck_editor_img_news">
             <div class="item_date">april 11, 2016</div>
             <img src="img/news_test_img.jpg" alt="img">
           </div>
