--- a/news.html
+++ b/news.html
@@ -83,8 +83,41 @@
           </div>
         </div>
 
-        <div class="row news_items_wrapper">
-          .col-xs-12.item
+        <div class="news_items_wrapper">
+          <div class="item">
+            <div class="row">
+              <div class="col-sm-4 col-xs-12">
+                <div class="ck_editor_img ck_editor_img_news ">
+                  <div class="item_date">april 11, 2016</div>
+                  <img src="img/news_test_img.jpg" alt="img">
+                </div>
+              </div>
+              <div class="col-sm-8 col-xs-12">
+                <h3 class="h3_title">Hello world!</h3>
+                <div class="ck_editor">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit cumque ut, facilis aperiam praesentium. Maiores pariatur rem sequi eum dolores placeat, cum, nihil sit laboriosam veritatis consequuntur neque ipsa, nobis.
+                </div>
+                <a href="javascript: void(0);" class="detailed pull-right">detailed +</a>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="row">
+              <div class="col-sm-4 col-xs-12">
+                <div class="ck_editor_img ck_editor_img_news ">
+                  <div class="item_date">april 11, 2016</div>
+                  <img src="img/news_test_img.jpg" alt="img">
+                </div>
+              </div>
+              <div class="col-sm-8 col-xs-12">
+                <h3 class="h3_title">Hello world!</h3>
+                <div class="ck_editor">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit cumque ut, facilis aperiam praesentium. Maiores pariatur rem sequi eum dolores placeat, cum, nihil sit laboriosam veritatis consequuntur neque ipsa, nobis.
+                </div>
+                <a href="javascript: void(0);" class="detailed pull-right">detailed +</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
