--- a/homepage.html
+++ b/homepage.html
@@ -317,6 +317,9 @@
               items:1,
           },
           600:{
+              items:2,
+          },
+          768:{
               items:3,
           },
           1000:{
