--- a/contacts.html
+++ b/contacts.html
@@ -105,6 +105,21 @@
 
           <!-- right side -->
           <aside class="right col-sm-4">
+
+            <div class="message_confirm">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum rerum quasi ab placeat similique atque assumenda repellendus quas ducimus, omnis quia natus adipisci, beatae? Non provident, fugit fugiat omnis molestiae?
+              <div class="close_confirm">
+                +
+              </div>
+            </div>
+
+            <div class="message_confirm">
+              Ваш запит успішно відправлено
+              <div class="close_confirm">
+                +
+              </div>
+            </div>
+
             <h2 class="h2_style">Write for us</h2>
             <form action="" class="form_style">
               <input type="text" placeholder="Ім'я">
