contacts message, icomoon

--- a/contacts.html
+++ b/contacts.html
@@ -98,7 +98,7 @@
             <div class="row">
               <div class="col-xs-12">
                 <!-- gmap -->
-                <div id="gmap">here be g map, styles - contacts.css, height: 370px</div>
+                <div class="gmap">here be g map, styles - contacts.css, height: 370px</div>
               </div>
             </div>
           </aside>
@@ -106,22 +106,18 @@
           <!-- right side -->
           <aside class="right col-sm-4">
 
-            <div class="message_confirm">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum rerum quasi ab placeat similique atque assumenda repellendus quas ducimus, omnis quia natus adipisci, beatae? Non provident, fugit fugiat omnis molestiae?
-              <div class="close_confirm">
-                +
-              </div>
-            </div>
-
-            <div class="message_confirm">
-              Ваш запит успішно відправлено
-              <div class="close_confirm">
-                +
-              </div>
-            </div>
-
             <h2 class="h2_style">Write for us</h2>
+
+            <div class="message_confirm">
+              <i class="icon-mail"></i>
+              Ваше повідомлення <br> надіслано
+              <div class="close_confirm">
+                +
+              </div>
+            </div>
+
             <form action="" class="form_style">
+
               <input type="text" placeholder="Ім'я">
               <input type="text" placeholder="Телефон">
               <input type="email" placeholder="E-mail">
